# glass_onion

./: .gitignore  .pre-commit-config.yml  CODEOWNERS  LICENSE  README.md  databricks.yml  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: report_sync_error.yml
.github/workflows/: deploy.yml  docs.yml  publish.yml  test.yml
config/: policy.json
docs/: contributing.md  datasets.md  getting_started.md  index.md  installation.md  integrating.md  integration.md  methodology.md
docs/reference/: engine.md  index.md  match.md  player.md  team.md  utils.md
docs/stylesheets/: extra.css
scripts/: update_cluster_policy.sh
src/glass_onion/: __init__.py  engine.py  match.py  player.py  team.py  utils.py
tests/: main_test.py  test_player.py  test_synchronize.py  utils.py
tests/fixtures/match/: 2022-25-usa.csv  2024-25-ucl.csv  2025-mls.csv
tests/fixtures/player/: 2023-09-13-oma-usa.csv  2024-09-22-chi-sd-w.csv  2025-07-05-usa-mex.csv  2025-07-15-kor-jpn.csv
tests/fixtures/team/: 2024-25-ucl.csv  2025-nwsl.csv
tests/functional/: test_synchronize.py
tests/integration/: test_packaging.py
tests/unit/: test_content.py  test_engine.py  test_match.py  test_player.py  test_team.py  test_utils.py
