[project]
name = "glass-onion"
version = "0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Data Analytics", email = "sportingdata@ussoccer.org" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "thefuzz>=0.22.1",
    "unidecode>=1.4.0"
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings>=1.0.0",
    "mkdocstrings-python>=2.0.1",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]
